# gpt-ui

./: .gitignore  README.md  TODO.md  config.yaml  gpt_ui.py  main.py  models_metadata.yaml  pyproject.toml  requirements.txt  test.py  test_main.py  user_prompt.txt
prompt_history/: saveing.txt
prompts/: helpful_assistant.yaml  is_this_good.yaml  meeting1.yaml  research_assistant.yaml
