[tool.poetry]
name = "gpt-ui"
version = "0.1.0"
description = "A chat interface for LLMs"
authors = ["Johannes C. Mayer <j.c.mayer240@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gpt = "gpt_ui:main"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.5.0"
prompt-toolkit = "^3.0.43"
tiktoken = "^0.5.2"
pyyaml = "^6.0.1"
gsay = {path = "../gsay"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
